# finetune

./: .gitignore
unsloth/: apply-hotfixes.sh  pyproject.toml
unsloth/experiments/2026-05-24-book-style/: README.md  common.py  design.md  evaluate.py  lora_test.py  plan.md  prepare.py  run.sh  train.py
unsloth/experiments/2026-05-24-book-style/results/: book_style_lora_results.md  ppl_table.json  run-stats.json  smoke-stats.json
unsloth/experiments/2026-05-24-book-style/tests/: test_common.py  test_evaluate.py  test_prepare.py  verify_ppl.py
